Changed about me page, some styles and added different background photo.#1

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -6,10 +6,19 @@
   margin-bottom: 80px;
 }
 
+.wrapper {
+  margin-top: 50px;
+}
+
 .secondary {
   width: 50%;
 }
 
 #text {
   font-family: arial, sans-serif;
+}
+
+footer {
+  padding: 50px 0;
+  background-color: #f8f8f8;
 }
