--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -9,12 +9,17 @@ body, html {
   height: 100%;
 }
 
+body {
+  position: relative;
+}
+
 body, h1, h2, h3, h4, h5, h6 {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
 }
 
 .intro-header {
+  height: inherit;
   padding-top: 50px;
   padding-bottom: 50px;
   text-align: center;
@@ -149,6 +154,10 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   padding: 50px 0;
   background-color: #f8f8f8;
 }
